--- a/madurativas/Views/Home/PartialView/mChat/_mChat.cshtml
+++ b/madurativas/Views/Home/PartialView/mChat/_mChat.cshtml
@@ -15,7 +15,7 @@
 <div class="modal-content">
 
     <div class="modal-header" style="padding:1%">
-        <h2>Cuestionario para la detección oportuna de Autismo en la Infancia (M-CHAT-R)*</h2>
+        <h5 class="modal-title">Cuestionario para la detección oportuna de Autismo en la Infancia (M-CHAT-R)*</h5>
     </div>
 
     <div id="formMChat" class="modal-body">
@@ -78,12 +78,6 @@
                         </label>
                     </div>
                     @*Boton de a tres fin*@
-                    @*<div class="col-md-4" style="padding-top: 1%">
-                        <div class="checkbox ">
-                            @Html.CheckBox("quest_1", Convert.ToBoolean(Model.quest_1), new { @class = "form-control switch bootstrap-switch-small bootstrap-switch-disabled", @data_on_text = "Si", @data_off_text = "No" })
-                            @Html.ValidationMessageFor(model => model.quest_1, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
                 </div>
 
                 <div class="form-group">
@@ -99,12 +93,6 @@
                             <input type="radio" name="options" id="quest2_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox" readonly>
-                @Html.CheckBox("quest_2", Convert.ToBoolean(Model.quest_2), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_2, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -122,12 +110,6 @@
                             <input type="radio" name="options" id="quest3_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_3", Convert.ToBoolean(Model.quest_3), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_3, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -145,12 +127,6 @@
                             <input type="radio" name="options" id="quest4_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_4", Convert.ToBoolean(Model.quest_4), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_4, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -168,12 +144,6 @@
                             <input type="radio" name="options" id="quest5_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_5", Convert.ToBoolean(Model.quest_5), new { @class = "form-control  switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_5, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -191,12 +161,6 @@
                             <input type="radio" name="options" id="quest6_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_6", Convert.ToBoolean(Model.quest_6), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_6, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -214,12 +178,6 @@
                             <input type="radio" name="options" id="quest7_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_7", Convert.ToBoolean(Model.quest_7), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_7, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -236,12 +194,6 @@
                             <input type="radio" name="options" id="quest8_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_8", Convert.ToBoolean(Model.quest_8), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_8, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -259,12 +211,6 @@
                             <input type="radio" name="options" id="quest9_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_9", Convert.ToBoolean(Model.quest_9), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_9, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -281,12 +227,6 @@
                             <input type="radio" name="options" id="quest10_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-                        <div class="checkbox">
-                            @Html.CheckBox("quest_10", Convert.ToBoolean(Model.quest_10), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No" })
-                            @Html.ValidationMessageFor(model => model.quest_10, "", new { @class = "text-danger" })
-                        </div>
-                    </div>*@
                 </div>
 
                 <div class="form-group">
@@ -304,12 +244,6 @@
                             <input type="radio" name="options" id="quest11_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_11", Convert.ToBoolean(Model.quest_11), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_11, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -326,12 +260,6 @@
                             <input type="radio" name="options" id="quest12_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_12", Convert.ToBoolean(Model.quest_12), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_12, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -349,12 +277,6 @@
                             <input type="radio" name="options" id="quest13_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_13", Convert.ToBoolean(Model.quest_13), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_13, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -371,12 +293,6 @@
                             <input type="radio" name="options" id="quest14_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_14", Convert.ToBoolean(Model.quest_14), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_14, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -394,12 +310,6 @@
                             <input type="radio" name="options" id="quest15_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_15", Convert.ToBoolean(Model.quest_15), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_15, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -416,12 +326,6 @@
                             <input type="radio" name="options" id="quest16_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_16", Convert.ToBoolean(Model.quest_16), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_16, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -438,12 +342,6 @@
                             <input type="radio" name="options" id="quest17_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_17", Convert.ToBoolean(Model.quest_17), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_17, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
 
                 <div class="form-group">
@@ -461,12 +359,6 @@
                             <input type="radio" name="options" id="quest18_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_18", Convert.ToBoolean(Model.quest_18), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_18, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -483,12 +375,6 @@
                             <input type="radio" name="options" id="quest19_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_19", Convert.ToBoolean(Model.quest_19), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_19, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-md-8">
@@ -505,53 +391,20 @@
                             <input type="radio" name="options" id="quest20_option3">No
                         </label>
                     </div>
-                    @*<div class="col-md-4">
-            <div class="checkbox">
-                @Html.CheckBox("quest_20", Convert.ToBoolean(Model.quest_20), new { @class = "form-control switch", @data_on_text = "Si", @data_off_text = "No", @_disabled })
-                @Html.ValidationMessageFor(model => model.quest_20, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
                 </div>
             </div>
             <hr style="margin-bottom: 10px;" />
             <div id="resultadoEvaluacion">
-                @*@if (Model.completado)
-                    {*@
-                @*if (@ViewBag.Puntuacion <= 2)
-                    {*@
-
-                @*var msg = (_edad < 24) ? "Pesquisar nuevamente luego de los 2 años de edad" : "No es necesario adoptar otras medidas a menos que la evaluación del desarrollo indique riesgo de TEA.";*@
-                @*<p>BAJO RIESGO: @msg </p>*@
                 <p id="br" style="color: green" hidden>BAJO RIESGO: </p>
-                @*//}
-                    else if (@ViewBag.Puntuacion <= 7)
-                    {*@
                 <p id="mr" style="color: red" hidden>MEDIANO RIESGO: Administre la entrevista de Seguimiento (segunda etapa del M-CHAT-R/F) para obtener más información con respecto a las respuestas de riesgo.</p>
-                @*}
-                    else
-                    {*@
                 <p id="ar" style="color: red" hidden>ALTO RIESGO: Es aceptable omitir la entrevista de Seguimiento y derivar inmediatamente a evaluación diagnóstica y evaluación de necesidad de intervención temprana.</p>
-
-                @*}
-                    }*@
             </div>
-            @*<hr />*@
             <p style="background-color:#CFF0FF; padding:0.8%; width:100%"><a href="http://www.panaacea.org/wp-content/uploads/2015/12/M-CHAT-R_F_Spanish_Argentina_Uruguay.pdf">http://www.panaacea.org/wp-content/uploads/2015/12/M-CHAT-R_F_Spanish_Argentina_Uruguay.pdf</a></p>
-            @*<hr />*@
-
             <div class="modal-footer">
-                @*@if (!Model.completado)
-                    {*@
-                <button id="btnMchat" onclick="SaveMChat();" type="submit" class="btn btn-primary">Guardar</button>
-                @*<div style="float:right">
-                    @Html.ActionLink("VER NUEVO TEST (seguimiento)", "Seguimiento", "mChat", new { Id = Model.estudio_id }, new { @class = "btn btn-primary", @id = "seguimientoMchat", @style = "display: none; margin-left:3%; background-color: #df691a; border: none;" })
-                </div>*@
+                <button id="btnMchat" onclick="SaveMChat();" type="submit" class="btn btn-primary btn-sm">Guardar</button>
                 <div class="col-md-6" style="width:100%; display:none" id="todoMchat">
                 </div>
-                @*}*@
             </div>
-
-
         }
     </div>
 
