--- a/madurativas/Content/Site.css
+++ b/madurativas/Content/Site.css
@@ -243,3 +243,32 @@ body {
 }
 
 /*Agregado de 3 toogle switch*/
+
+
+
+.btn-primary, .btn-primary:active, .btn-primary:focus {
+    font-weight: bold;
+    background-color: #24990F;
+    border: 1px solid #24990F;
+}
+
+.btn-primary:hover {
+    background-color: #24990F;
+    border: 1px solid #24990F;
+}
+
+.btn {
+    border-radius: 0;
+}
+
+.btn-wide {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.centrado {
+    text-align: center;
+}
+
+
+
